--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,8 @@
   </head>
 
   <body>
-	  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  	<div id="navbar">
+	  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="position: relative;">
 	  <a class="navbar-brand" href="#">Mi Pinterest</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
@@ -37,13 +38,13 @@
 	      </li>
 	      <li class="nav-item dropdown">
 	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	          Dropdown
+	          Secciones
 	        </a>
 	        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-	          <a class="dropdown-item" href="#">Action</a>
-	          <a class="dropdown-item" href="#">Another action</a>
+	          <a class="dropdown-item" href="#Videos">Videos</a>
+	          <a class="dropdown-item" href="#Enlaces">Enlaces</a>
 	          <div class="dropdown-divider"></div>
-	          <a class="dropdown-item" href="#">Something else here</a>
+	          <a class="dropdown-item" href="#Contacto">contacto</a>
 	        </div>
 	      </li>
 	      <li class="nav-item">
@@ -52,6 +53,7 @@
 	    </ul>
 	  </div>
 	</nav>
+	</div>
 
 
     <%= yield %>
