--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<body>
+<body data-spy="scroll" data-target="#navbar">
 <div class="jumbotron responsive" >
 <div class="container">
 	<div class="row responsive">
@@ -6,7 +6,7 @@
 		  	<h1 class="display-4 titulo1" style="font-size: 100px; font-family: helvetica;">VIDEOJUEGOS!</h1>
 		 	<p class="lead text-white" style="font-size: 30px;">En este sitio estan los mejores videojuegos del momento!</p>
 			<hr class="my-4">	  <p class="text-white" style="font-size: 25px;">Estrenos, rese&ntilde;as, gameplays y mucho mas!</p>
-			 <a href="#" class="btn btn-secondary btn-lg btn-block"  role="button">Ver mas </a>
+			 <a href="#Videos" class="btn btn-secondary btn-lg btn-block"  role="button">Ver Videos </a>
 			 <span class="glyphicon glyphicon-sunglasses" style="font-size: 20px; color: green;"></span>
 		</div>
 		<div class="col-md-4">
@@ -18,7 +18,7 @@
 
 <div class="container">
 	<div class="row" id="nuevo">
-		<div class="col-md-4">
+		<div class="col-md-4">	
 			<div class="page-header text-white">
 				<h1 style="text-align: center;">HOLA HOLA</h1>
 			</div>
@@ -60,6 +60,7 @@
 		</div>
 	</div>
 </div>
+<hr class="my-4">
 <h1 class="display-4 titulo1 responsive" id="titlegaleria" style="font-size: 60px; font-family: helvetica; text-align: center;">Galeria</h1>
 <div name=“galeria” id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -72,10 +73,10 @@
       <img class="d-block w-100" src="https://cdn.vox-cdn.com/thumbor/m5K7b9rreZ0QOC_RQm_0mftafNE=/1400x788/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/9371777/Carnival_Kerfuffle_header.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://timedotcom.files.wordpress.com/2017/10/zen-playing-old-video-games.jpg" alt="Second slide">
+      <img class="d-block w-100" src="https://media.redadn.es/imagenes/need-for-speed-payback-pc-ps4-xbox-one_308924.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://www.technobezz.com/best/wp-content/uploads/2015/10/www.youtube.com_.jpg" alt="Third slide">
+      <img class="d-block w-100" src="http://as01.epimg.net/esports/imagenes/2017/11/19/mas_esports/1511100538_311211_1511101916_noticia_normal.jpg" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -87,14 +88,56 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+<div class="container" id="Videos">
+	<hr class="my-4">
+	<h2 class="display-4 titulo1 responsive" style="font-size: 60px; font-family: helvetica; text-align: center;">Videos</h2>
+		<div class="row">
+	  		<div class="col-md-6">
+				<h2 class="display-4 titulo1 responsive" style="font-size: 40px; font-family: helvetica; text-align: center;">Gameplays!</h2>
+	  				<p class="text-white" style="font-size: 25px; text-align: center;"">...y algo mas</p>
+	  				<iframe width="560" height="315" src="https://www.youtube.com/embed/eaW0tYpxyp0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+	  				<iframe width="560" height="315" src="https://www.youtube.com/embed/v9ERab8P6Io" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+	  				<iframe width="560" height="315" src="https://www.youtube.com/embed/IeKVgL7sgeI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+	  				<iframe width="560" height="315" src="https://www.youtube.com/embed/4hqqFqcr1K8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>	
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/rLizrgA2b_8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+			</div>
+			<div class="col-md-6">
+				<h2 class="display-4 titulo1 responsive" style="font-size: 40px; font-family: helvetica; text-align: center;">Musica</h2>
+	  				<p class="text-white" style="font-size: 25px; text-align: center;"">Para esuchar mientras juegas!</p>
+	  				<iframe width="560" height="315" src="https://www.youtube.com/embed/yjb0j9l1sz4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+	  				<iframe width="560" height="315" src="https://www.youtube.com/embed/1ePu8zbG7Qg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+	  				<iframe width="560" height="315" src="https://www.youtube.com/embed/482tDopNzoc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/Qu5hEPo_Tdo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/AkFqg5wAuFk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					
+			</div>
+		</div>
+</div>
+
+<div class="container" id="Enlaces">
+<hr class="my-4">
+	<h1 class="display-4 titulo1 responsive" id="Contacto" style="font-size: 50px; font-family: helvetica; text-align: center; ">Enlaces externos</h1>
+	<a href="https://www.rockstargames.com" target="_blank" class="badge badge-warning"><h1 class="display-4 titulo1 responsive" id="Contacto" style="font-size: 40px; font-family: helvetica; text-align: center; ">Rockstar Games Site</h1></a>
+	<a href="https://https://www.activision.com/" target="_blank" class="badge badge-warning"><h1 class="display-4 titulo1 responsive" id="Contacto" style="font-size: 40px; font-family: helvetica; text-align: center; ">Activision Site</h1></a>
+	<a href="https://www.ea.com/es-mx" target="_blank" class="badge badge-warning"><h1 class="display-4 titulo1 responsive" id="Contacto" style="font-size: 40px; font-family: helvetica; text-align: center; ">Electronic Arts</h1></a>
+
+	
+ 
+</div>
+
+<div class="container">
+<hr class="my-4">
+	 <div class="card-body lg"></a>
+	<div class="card text-white bg-dark mb-8" >
+  <div class="card-header"><h1 class="display-4 titulo1 responsive" id="Contacto" style="font-size: 60px; font-family: helvetica; text-align: center;">Contacto</h1></div>
+  <div class="card-body">
+    <h5 class="card-title">e-mail: <a href=“mailto:luistxraguayo@gmail.com>luistxraguayo@gmail.com</a> </h5>
+    <p class="card-text">Por lo que guste preguntar, joven.</p>
+  </div>
+</div>
 
 
-<a href=“mailto:luistxraguayo@gmail.com>luistxraguayo@gmail.com</a>
-<a href="http://utng.edu.mx">UTNG</a>
-<a href="http://utng.edu.mx" target="_blank">UTNG</a>
-
-<img src="https://betanews.com/wp-content/uploads/2016/04/penguingun-600x600.jpg"></img>
 
 
-
-</body>
+</body
